# liteduck

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  VISION.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.design/: design-system.html  tokens.json
.githooks/: install.sh  pre-commit  pre-push
.github/workflows/: auto-release.yml  ci.yml  ios-build.yml  regression.yml  release.yml  security-scan.yml
HomebrewFormula/: liteduck.rb
crates/liteduck-core/: Cargo.toml  build.rs
crates/liteduck-core/src/: db.rs  device_identity.rs  lib.rs  liteduck_core.udl  scrum.rs  settings_store.rs  traits.rs
docs/: HOMEBREW.md  RELEASING.md  adr-001-single-direction.md  adr-002-plugin-ui-extension-host.md  design-liteduck-home.md  design-settings-redesign.md  design-workspace-data-isolation.md
e2e/: app-menu.spec.ts  navigation.spec.ts  settings.spec.ts  tauri-mock.ts  terminal.spec.ts
notes/: 2026-05-28_dependabot-triage.md  2026-05-28_gaps-consistency-security.md  2026-05-28_gaps-impl-test.md  2026-05-28_git-page-review.md  2026-05-28_plugin-declarative-views.md  2026-05-28_plugin-system-design.md  2026-05-28_plugin-ui-host-design.md  2026-05-28_settings-page-audit.md  2026-05-28_settings-page-review-post-redesign.md  2026-05-29_multi-window-support.md  2026-06-02_files-editor-standards-plan.md
scripts/: appstore-upload.sh  build.sh  bump-version.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: app-mas.entitlements  app.entitlements
src-tauri/icons/: icon.icns
src-tauri/resources/plugins/bwoc/: SPEC.md  bwoc.sh  plugin.json  ui.js
src-tauri/resources/plugins/jira/: SPEC.md  auth.toml  jira.sh  plugin.json  ui.js
src-tauri/src/: agent_memory.rs  app_menu.rs  bash_validator.rs  biometric.rs  bwoc.rs  db.rs  device_identity.rs  event_sink.rs  file_logger.rs  files.rs  git.rs  home.rs  keychain.rs  keyring_store.rs  lib.rs  main.rs  plugins.rs  pty.rs  settings.rs  terminal.rs  updater.rs  windows.rs  workspace.rs
src-tauri/tests/: integration_scrum_md.rs
src/components/: BiometricLockScreen.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CreateWorkspaceDialog.tsx  DevicePicker.tsx  DiffViewer.test.tsx  DiffViewer.tsx  DragGhost.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FilePreview.test.tsx  FilePreview.tsx  FileTree.tsx  GitGraph.tsx  Header.test.tsx  Header.tsx  LiteDuckLogo.tsx  Markdown.test.tsx  Markdown.tsx  MiniDuck.tsx  NotificationCenter.test.tsx  NotificationCenter.tsx  ReadingControls.tsx  ReadingView.tsx  RecentWorkspaces.tsx  ShortcutsHelp.test.tsx  ShortcutsHelp.tsx  Sidebar.tsx  SplitTerminal.tsx  TerminalTabs.tsx  TmuxSessionPicker.tsx  UpdateChecker.tsx  UpdateDialog.tsx  WorkspaceGate.tsx  (+2 more)
tests/: example.test.js
(+160 files in other folders)
