[package]
name = "liteduck"
version = "2026.6.6-1"
description = "LiteDuck — a lightweight code editor by Bemind Technology"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bemind_liteduck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# Capitalised so the dev-mode binary (and therefore the Dock label when
# running `npm run tauri:dev`) reads "LiteDuck" instead of the lowercase
# Cargo package slug.  Production .app bundles use tauri.conf.json:productName.
name = "LiteDuck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process", "fs"] }
parking_lot = "0.12"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "blocking", "stream", "rustls"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
url = "2"
tauri-plugin-dialog = "2.6.0"
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
log = "0.4"
liteduck-core = { path = "../crates/liteduck-core" }

[dev-dependencies]
tempfile = "3"

# Desktop-only dependencies — excluded on iOS because they use
# native OS APIs unavailable in the iOS sandbox.
[target.'cfg(not(target_os = "ios"))'.dependencies]
portable-pty = "0.8"
git2 = "0.20"
notify = "6"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"

