[package]
name = "liteduck-core"
version = "0.1.0"
edition = "2021"
description = "Shared business logic for LiteDuck — used by desktop (Tauri), iOS (UniFFI), and Android (UniFFI)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
log = "0.4"
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
